# timber_design

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  analyzers_test.py  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py  versions.json
.claude/: settings.local.json
.github/workflows/: build.yml  docs.yml  main.yml  yak_publish.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/timber_design.workflow/: index.html
0.1.0/installation/: index.html
0.1.0/license/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/timber_design.workflow/: index.html
0.2.0/installation/: index.html
0.2.0/license/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/api/timber_design.workflow/: index.html
0.2.1/installation/: index.html
0.2.1/license/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/api/timber_design.workflow/: index.html
0.3.0/installation/: index.html
0.3.0/license/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/api/timber_design.workflow/: index.html
0.3.1/installation/: index.html
0.3.1/license/: index.html
0.3.1/search/: search_index.json
docs/: api.rst  conf.py  connections_2d.md  index.md  index.rst  installation.md  installation.rst
docs/api/: timber_design.populators.md  timber_design.rst  timber_design.workflow.md
docs/contribution/: class_diagrams.md
docs/user_guide/: populating_panels.md
examples/: basic_slab.py  gh_debug_full_featured.py  gh_debug_multi_solve.py  panel_population.py
examples/composite_joint_rule/: 01_pairwise_vs_composite.py  02_pairwise_and_composite_together.py  03_multiple_composite_rules.py  composite_joint_demo_code.ghx  composite_joint_example_components.ghx  composite_rule_examples.py
latest/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
latest/api/: timber_design.html
src/timber_design/: __init__.py  composite_joint.py  wall_details.py  wall_from_surface.py  wall_populator.py  workflow.py
src/timber_design/connections_2d/: __init__.py  beam2d.py  connection_solver_2d.py
src/timber_design/detail_sets/: __init__.py  details.py  interface_details.py  opening_details.py  slab_details.py  wall_details.py
src/timber_design/element_generators/: __init__.py  edge_element_generator.py  element_generator_coordinator.py  element_generator_parameters.py  element_generator_params.py  generator_functions.py  opening_element_generator.py  plate_element_generator.py  recess_element_generator.py  slab_edge_element_generator.py  slab_element_generator.py  slab_plate_element_generator.py  slab_recess_element_generator.py  slab_stud_element_generator.py  stud_element_generator.py
src/timber_design/ghpython/: ghcomponent_helpers.py  joint_arg_mapping.py
src/timber_design/ghpython/components/CT_Attributes_Check/: code.py  metadata.json
src/timber_design/ghpython/components/CT_Attributes_Create/: code.py  (+1 more)
src/timber_design/ghpython/yak_template/: manifest.yml
src/timber_design/populators/: __init__.py  agent_intersection.py  beam2d.py  beam_2d.py  connection_solver_2d.py  generator_intersection.py  layer.py  model2d.py  populator.py  wall_populator.py
src/timber_design/populators/element_generators/: edge_element_generator.py  element_generator.py  generator_functions.py  opening_element_generator.py  plate_element_generator.py  recess_element_generator.py  stud_element_generator.py
src/timber_design/populators/generator_factories/: panel_generator_factory.py  recess_panel_generator_factory.py  recess_slab_generator_factory.py  slab_generator_factory.py  stud_panel_generator_factory.py  stud_slab_generator_factory.py
src/timber_design/populators/populator_agents/: edge_populator_agent.py  feature_agent.py  layer_agent.py  opening_populator_agent.py  panel_boundary_populator_agent.py  plate_populator_agent.py  populator_agent.py  recess_populator_agent.py  stud_populator_agent.py
src/timber_design/populators/populator_configs/: panel_populator_config.py  recess_panel_config.py  recess_panel_populator_config.py  stud_panel_config.py  stud_panel_populator_config.py
tests/: test_agent_intersection.py  test_cluster_joint_rule.py  test_composite_joint_rule.py  test_connection_solver_2d.py  test_full_featured_workflow.py  test_generator_intersection.py  test_install_dependencies.py  test_joint_arg_mapping.py  test_joint_rules.py  test_panel_populator_workflow.py  test_populators.py
(+195 files in other folders)
